--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <p>Dit is de startpagina van mijn website. Klik op de links om naar andere pagina's te gaan.</p>
   </main>
 
+  <img src="mijn-foto.jpg" alt="Beschrijving van de afbeelding">   <img src="mijn-foto.jpg" alt="Beschrijving van de afbeelding">
+  <img src="mijn-foto.jpg" alt="Beschrijving van de afbeelding">
   <img src="mijn-foto.jpg" alt="Beschrijving van de afbeelding">
 
   <footer>
