--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
     <p>Dit is de startpagina van mijn website. Klik op de links om naar andere pagina's te gaan.</p>
   </main>
 
-  <img src="mijn-foto.jpg" alt="Beschrijving van de afbeelding">   <img src="mijn-foto.jpg" alt="Beschrijving van de afbeelding">
+  <img src="mijn-foto.jpg" alt="Beschrijving van de afbeelding"> 
+   <h1>Emma Geerts</h1>
+  <p>Klinisch psycholoog</p>
+  <p>Contact informatie</p>
+
+  <img src="mijn-foto.jpg" alt="Beschrijving van de afbeelding">
   <img src="mijn-foto.jpg" alt="Beschrijving van de afbeelding">
   <img src="mijn-foto.jpg" alt="Beschrijving van de afbeelding">
 
