--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home - jaspers Website</title>
+  <title>Emma Geerts Klinisch Psycholoog</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -22,17 +22,15 @@
     <p>Dit is de startpagina van mijn website. Klik op de links om naar andere pagina's te gaan.</p>
   </main>
 
-  <img src="mijn-foto.jpg" alt="Beschrijving van de afbeelding"> 
+  <img src="EmmaGeerts.jpg" alt="Beschrijving van de afbeelding"> 
    <h1>Emma Geerts</h1>
   <p>Klinisch psycholoog</p>
   <p>Contact informatie</p>
 
-  <img src="mijn-foto.jpg" alt="Beschrijving van de afbeelding">
-  <img src="mijn-foto.jpg" alt="Beschrijving van de afbeelding">
-  <img src="mijn-foto.jpg" alt="Beschrijving van de afbeelding">
+
 
   <footer>
-    <p>&copy; 2024 Mijn Website</p>
+    <p>&copy; 2024 Jasper</p>
   </footer>
 </body>
 </html>
