--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact - Mijn Website</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -18,21 +17,11 @@
   </header>
 
   <main>
-    <h1>Contacteer Mij</h1>
-    <p>Als je contact wilt opnemen, vul dan het onderstaande formulier in.</p>
-    <form action="#" method="post">
-      <label for="name">Naam:</label>
-      <input type="text" id="name" name="name"><br><br>
-      <label for="email">E-mail:</label>
-      <input type="email" id="email" name="email"><br><br>
-      <label for="message">Bericht:</label><br>
-      <textarea id="message" name="message" rows="4" cols="50"></textarea><br><br>
-      <input type="submit" value="Verstuur">
-    </form>
+
   </main>
 
   <footer>
-    <p>&copy; 2024 Mijn Website</p>
+    <p>&copy; 2024 Jasper</p>
   </footer>
 </body>
 </html>
