--- a/over.html
+++ b/over.html
@@ -21,6 +21,8 @@
     <h1>Over Mij</h1>
     <p>Deze pagina vertelt je meer over mij en deze website.</p>
 
+  </main>
+
     <div class="col-12 col-md-6">
       <h3 class="detail-page__section-subheading">Werkmomenten</h3><p>maandag 8u30-19u<br />
 dinsdag niet<br />
@@ -35,10 +37,10 @@ zaterdag 9u-12u</p>
       
       
       <h3 class="detail-page__section-subheading">Beroepsvereniging</h3><p>VVKP  - Vlaamse vereniging klinisch psychologen</p>                </div>
-  </main>
+
 
   <footer>
-    <p>&copy; 2024 Mijn Website</p>
+    <p>&copy; 2024 Jasper</p>
   </footer>
 </body>
 </html>
