--- a/over.html
+++ b/over.html
@@ -22,7 +22,7 @@
     <p>Deze pagina vertelt je meer over mij en deze website.</p>
 
   </main>
-
+  <Lefty>
     <div class="col-12 col-md-6">
       <h3 class="detail-page__section-subheading">Werkmomenten</h3><p>maandag 8u30-19u<br />
 dinsdag niet<br />
@@ -37,7 +37,7 @@ zaterdag 9u-12u</p>
       
       
       <h3 class="detail-page__section-subheading">Beroepsvereniging</h3><p>VVKP  - Vlaamse vereniging klinisch psychologen</p>                </div>
-
+  </Lefty>
 
   <footer>
     <p>&copy; 2024 Jasper</p>
