--- a/over.html
+++ b/over.html
@@ -23,20 +23,19 @@
 
   </main>
   <Lefty>
-    <div class="col-12 col-md-6">
-      <h3 class="detail-page__section-subheading">Werkmomenten</h3><p>maandag 8u30-19u<br />
+      <h3>Werkmomenten</h3><p>maandag 8u30-19u<br />
 dinsdag niet<br />
 woensdag 8u30-16u30<br />
 donderdag 8u30-12u30, in de namiddag niet<br />
 vrijdag niet<br />
 zaterdag 9u-12u</p>
-      <h3 class="detail-page__section-subheading">Wachtlijst</h3><p>geen</p>
-      <h3 class="detail-page__section-subheading">Prijs voor een consult</h3><p>€75</p>
-      <h3 class="detail-page__section-subheading">Duur van de sessie</h3><p>50 minuten</p>
-      <h3 class="detail-page__section-subheading">Opleiding</h3><p>Master in de klinische psychologie </p>
+      <h3>Wachtlijst</h3><p>geen</p>
+      <h3>Prijs voor een consult</h3><p>€75</p>
+      <h3>Duur van de sessie</h3><p>50 minuten</p>
+      <h3>Opleiding</h3><p>Master in de klinische psychologie </p>
       
       
-      <h3 class="detail-page__section-subheading">Beroepsvereniging</h3><p>VVKP  - Vlaamse vereniging klinisch psychologen</p>                </div>
+      <h3>Beroepsvereniging</h3><p>VVKP  - Vlaamse vereniging klinisch psychologen</p>               
   </Lefty>
 
   <footer>
