--- a/over.html
+++ b/over.html
@@ -22,7 +22,10 @@
     <p>Deze pagina vertelt je meer over mij en deze website.</p>
 
   </main>
-  <Lefty>
+
+<div class="flex-container">
+    <div class="flex-item">Item 1</div>
+  
       <h3>Werkmomenten</h3><p>maandag 8u30-19u<br />
 dinsdag niet<br />
 woensdag 8u30-16u30<br />
@@ -36,7 +39,7 @@ zaterdag 9u-12u</p>
       
       
       <h3>Beroepsvereniging</h3><p>VVKP  - Vlaamse vereniging klinisch psychologen</p>               
-  </Lefty>
+      </div>
 
   <footer>
     <p>&copy; 2024 Jasper</p>
