--- a/over.html
+++ b/over.html
@@ -24,9 +24,10 @@
   </main>
 
 <div class="flex-container">
-    <div class="flex-item">Item 1</div>
+   
   
-      <h3>Werkmomenten</h3><p>maandag 8u30-19u<br />
+      <h3>Werkmomenten</h3><br />
+      <p>maandag 8u30-19u<br />
 dinsdag niet<br />
 woensdag 8u30-16u30<br />
 donderdag 8u30-12u30, in de namiddag niet<br />
