--- a/over.html
+++ b/over.html
@@ -27,19 +27,24 @@
    
   
       <h3>Werkmomenten</h3><br />
-      <p>maandag 8u30-19u<br />
+      maandag 8u30-19u<br />
 dinsdag niet<br />
 woensdag 8u30-16u30<br />
 donderdag 8u30-12u30, in de namiddag niet<br />
 vrijdag niet<br />
-zaterdag 9u-12u</p>
-      <h3>Wachtlijst</h3><p>geen</p>
-      <h3>Prijs voor een consult</h3><p>€75</p>
-      <h3>Duur van de sessie</h3><p>50 minuten</p>
-      <h3>Opleiding</h3><p>Master in de klinische psychologie </p>
+zaterdag 9u-12u<br />
+      <h3>Wachtlijst</h3><br />
+      geen<br />
+      <h3>Prijs voor een consult</h3><br />
+      €75<br />
+      <h3>Duur van de sessie</h3><br />
+      50 minuten<br />
+      <h3>Opleiding</h3><br />
+      Master in de klinische psychologie <br />
       
       
-      <h3>Beroepsvereniging</h3><p>VVKP  - Vlaamse vereniging klinisch psychologen</p>               
+      <h3>Beroepsvereniging</h3><br />
+      VVKP  - Vlaamse vereniging klinisch psychologen   <br />          
       </div>
 
   <footer>
