--- a/over.html
+++ b/over.html
@@ -23,7 +23,7 @@
 
   </main>
 
-<div class="flex-container">
+<Lefty>
    
   
       <h3>Werkmomenten</h3><br />
@@ -45,7 +45,7 @@ zaterdag 9u-12u<br />
       
       <h3>Beroepsvereniging</h3><br />
       VVKP  - Vlaamse vereniging klinisch psychologen   <br />          
-      </div>
+      <Lefty
 
   <footer>
     <p>&copy; 2024 Jasper</p>
