--- a/over.html
+++ b/over.html
@@ -45,7 +45,7 @@ zaterdag 9u-12u<br />
       
       <h3>Beroepsvereniging</h3><br />
       VVKP  - Vlaamse vereniging klinisch psychologen   <br />          
-      <Lefty
+</Lefty>
 
   <footer>
     <p>&copy; 2024 Jasper</p>
