--- a/over.html
+++ b/over.html
@@ -27,7 +27,7 @@
    
   
 <h3>Werkmomenten</h3><br />
-maandag 8u30-19u<br />
+<p>maandag 8u30-19u<br /></p>
 dinsdag niet<br />
 woensdag 8u30-16u30<br />
 donderdag 8u30-12u30, in de namiddag niet<br />
