--- a/over.html
+++ b/over.html
@@ -26,25 +26,25 @@
 <Lefty>
    
   
-<h3>Werkmomenten</h3><br />
-<p>maandag 8u30-19u<br /></p>
-dinsdag niet<br />
-woensdag 8u30-16u30<br />
-donderdag 8u30-12u30, in de namiddag niet<br />
-vrijdag niet<br />
-zaterdag 9u-12u<br />
-      <h3>Wachtlijst</h3><br />
-      geen<br />
-      <h3>Prijs voor een consult</h3><br />
-      €75<br />
-      <h3>Duur van de sessie</h3><br />
-      50 minuten<br />
-      <h3>Opleiding</h3><br />
-      Master in de klinische psychologie <br />
+<h3>Werkmomenten</h3>
+<p>maandag 8u30-19u</p>
+<p>dinsdag niet</p>
+  <p>woensdag 8u30-16u30</p>
+    <p>donderdag 8u30-12u30, in de namiddag niet</p>
+      <p>vrijdag niet</p>
+        <p>zaterdag 9u-12u</p>
+      <h3>Wachtlijst</h3></p>
+      <p>geen<br /></p>
+      <h3>Prijs voor een consult</h3></p>
+      <p>€75<br /></p>
+      <h3>Duur van de sessie</h3></p>
+      <p>50 minuten</p>
+      <h3>Opleiding</h3></p>
+      <p>Master in de klinische psychologie </p>
       
       
-      <h3>Beroepsvereniging</h3><br />
-      VVKP  - Vlaamse vereniging klinisch psychologen   <br />          
+      <h3>Beroepsvereniging</h3>
+      <p>VVKP  - Vlaamse vereniging klinisch psychologen     </p>      
 </Lefty>
 
   <footer>
