--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="over.html">Over</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="Info.html">Info</a></li>
+        <li><a href="Over.html">Over</a></li>
       </ul>
     </nav>
   </header>
