--- a/Over.html
+++ b/Over.html
@@ -19,8 +19,7 @@
 
   <main>
     <h3>Introductie</h3>
-    <p>Na mijn afstuderen (Master in de klinische psychologie, Ugent, 2018) deed ik ervaring op</p>
-    <p> in uiteenlopende hulpverleningscontexten,meer bepaald met een tijdelijk contract in een </p>
+    <p>Na mijn afstuderen (Master in de klinische psychologie, Ugent, 2018) <br /> deed ik ervaring op in uiteenlopende hulpverleningscontexten,<br />meer bepaald met een tijdelijk contract in een </p>
     <p>psychiatrisch ziekenhuis en later voltijds meerdere jaren in het CLB (Centrum voor Leerlingenbegeleiding).</p>
     <p>Vanaf 1 oktober 2024 start ik als zelfstandig klinisch psycholoog. Ik zal individuele gesprekstherapie aanbieden </p>
     <p>aan (jong-)volwassenen vanaf 17 jaar die last hebben van uiteenlopende socio-emotionele problemen zoals depressie,</p>
